--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,32 @@
 </head>
 <body>
 
-<h1>223</h1>
+<div class="wrap">
+    <div class="main">
+
+        <!-- S panel-->
+        <div class="panel">
+            <div class="header">
+                <div class="avatar">
+                    <img src="img/avatar.jpg" alt=""/>
+                </div>
+                <div class="info">
+                    <h3>焦点科技股份有限公司</h3>
+                    <span class="opt">
+                        <i class="iconfont iconfont-set"></i>
+                    </span>
+                </div>
+            </div><!-- /header -->
+
+            <div class="search-bar">
+
+            </div><!-- /search-bar -->
+
+        </div>
+        <!-- E panel-->
+
+    </div>
+</div>
 
 </body>
 </html>
