--- a/demo.html
+++ b/demo.html
@@ -17,7 +17,7 @@
                     <img src="img/avatar.jpg" alt=""/>
                 </div>
                 <div class="info">
-                    <h3>焦点科技股份有限公司</h3>
+                    <h3 class="nickname" title="焦点科技股份有限公司">焦点科技股份有限公司</h3>
                     <span class="opt">
                         <i class="iconfont iconfont-set"></i>
                     </span>
@@ -25,11 +25,195 @@
             </div><!-- /header -->
 
             <div class="search-bar">
-
+                <i class="iconfont iconfont-search"></i>
+                <input type="text" class="txt" placeholder="搜索最近联系人"/>
             </div><!-- /search-bar -->
+
+
+            <div class="nav-view">
+                <ul class="chat-lst">
+                    <li class="chat-item">
+                        <div class="avatar">
+                            <img src="img/avatar.jpg" alt=""/>
+                        </div>
+                        <div class="info">
+                            <div class="hd">
+                                <h3 class="nickname" title="广西星火科技">广西星火科技</h3>
+                                <span class="num"><b>55</b></span>
+                            </div>
+                            <div class="bd">
+                                <p class="msg">
+                                    好的，谢谢
+                                </p>
+                                <span class="time">17:00</span>
+                            </div>
+                        </div>
+                    </li><!-- /chat-item-->
+
+                    <li class="chat-item on">
+                        <div class="avatar">
+                            <img src="img/avatar.jpg" alt=""/>
+                        </div>
+                        <div class="info">
+                            <div class="hd">
+                                <h3 class="nickname" title="广西星火科技">广西星火科技</h3>
+                            </div>
+                            <div class="bd">
+                                <p class="msg">
+                                    好的，谢谢
+                                </p>
+                                <span class="time">17:00</span>
+                            </div>
+                        </div>
+                    </li><!-- /chat-item-->
+
+                    <li class="chat-item">
+                        <div class="avatar">
+                            <img src="img/avatar.jpg" alt=""/>
+                        </div>
+                        <div class="info">
+                            <div class="hd">
+                                <h3 class="nickname" title="广西星火科技">广西星火科技</h3>
+                                <span class="num"><b>99+</b></span>
+                            </div>
+                            <div class="bd">
+                                <p class="msg">
+                                    好的，谢谢
+                                </p>
+                                <span class="time">17:00</span>
+                            </div>
+                        </div>
+                    </li><!-- /chat-item-->
+
+                    <li class="chat-item">
+                        <div class="avatar">
+                            <img src="img/avatar.jpg" alt=""/>
+                        </div>
+                        <div class="info">
+                            <div class="hd">
+                                <h3 class="nickname" title="广西星火科技">广西星火科技</h3>
+                                <span class="num"><b>55</b></span>
+                            </div>
+                            <div class="bd">
+                                <p class="msg">
+                                    好的，谢谢
+                                </p>
+                                <span class="time">17:00</span>
+                            </div>
+                        </div>
+                    </li><!-- /chat-item-->
+
+                    <li class="chat-item">
+                        <div class="avatar">
+                            <img src="img/avatar.jpg" alt=""/>
+                        </div>
+                        <div class="info">
+                            <div class="hd">
+                                <h3 class="nickname" title="广西星火科技">广西星火科技</h3>
+                                <span class="num"><b>55</b></span>
+                            </div>
+                            <div class="bd">
+                                <p class="msg">
+                                    好的，谢谢
+                                </p>
+                                <span class="time">17:00</span>
+                            </div>
+                        </div>
+                    </li><!-- /chat-item-->
+
+                    <li class="chat-item">
+                        <div class="avatar">
+                            <img src="img/avatar.jpg" alt=""/>
+                        </div>
+                        <div class="info">
+                            <div class="hd">
+                                <h3 class="nickname" title="广西星火科技">广西星火科技</h3>
+                                <span class="num"><b>55</b></span>
+                            </div>
+                            <div class="bd">
+                                <p class="msg">
+                                    好的，谢谢
+                                </p>
+                                <span class="time">17:00</span>
+                            </div>
+                        </div>
+                    </li><!-- /chat-item-->
+
+                    <li class="chat-item">
+                        <div class="avatar">
+                            <img src="img/avatar.jpg" alt=""/>
+                        </div>
+                        <div class="info">
+                            <div class="hd">
+                                <h3 class="nickname" title="广西星火科技">广西星火科技</h3>
+                                <span class="num"><b>55</b></span>
+                            </div>
+                            <div class="bd">
+                                <p class="msg">
+                                    好的，谢谢
+                                </p>
+                                <span class="time">17:00</span>
+                            </div>
+                        </div>
+                    </li><!-- /chat-item-->
+                    <li class="chat-item">
+                        <div class="avatar">
+                            <img src="img/avatar.jpg" alt=""/>
+                        </div>
+                        <div class="info">
+                            <div class="hd">
+                                <h3 class="nickname" title="广西星火科技">广西星火科技</h3>
+                                <span class="num"><b>55</b></span>
+                            </div>
+                            <div class="bd">
+                                <p class="msg">
+                                    好的，谢谢
+                                </p>
+                                <span class="time">17:00</span>
+                            </div>
+                        </div>
+                    </li><!-- /chat-item-->
+
+                    <li class="chat-item">
+                        <div class="avatar">
+                            <img src="img/avatar.jpg" alt=""/>
+                        </div>
+                        <div class="info">
+                            <div class="hd">
+                                <h3 class="nickname" title="广西星火科技">广西星火科技</h3>
+                                <span class="num"><b>55</b></span>
+                            </div>
+                            <div class="bd">
+                                <p class="msg">
+                                    好的，谢谢
+                                </p>
+                                <span class="time">17:00</span>
+                            </div>
+                        </div>
+                    </li><!-- /chat-item-->
+
+                </ul>
+            </div><!-- /nav-view -->
 
         </div>
         <!-- E panel-->
+
+
+
+
+
+        <!-- S chat-area-->
+        <div class="chat-area">
+            <div class="chat-area-hd">
+                <h2>大族激光科技产业集团股份有限公司</h2>
+                <span class="status"></span>
+            </div>
+        </div>
+        <!-- E chat-area-->
+
+
+
+
 
     </div>
 </div>
