--- a/demo.html
+++ b/demo.html
@@ -10,6 +10,19 @@
 <div class="wrap">
     <div class="main">
 
+
+
+
+
+
+
+
+
+
+
+
+
+
         <!-- S panel-->
         <div class="panel">
             <div class="header">
@@ -202,12 +215,98 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
         <!-- S chat-area-->
         <div class="chat-area">
+
             <div class="chat-area-hd">
                 <h2>大族激光科技产业集团股份有限公司</h2>
                 <span class="status"></span>
+                <span class="status status-off"></span>
+            </div><!-- /chat-area-hd -->
+
+
+
+            <!-- S chat-area-bd-->
+            <div class="chat-area-bd">
+                <div class="msg-system">
+                    <a href="">查看更多消息</a>
+                </div>
+
+                <dl class="msg-pre">
+                    <dt>您是否想咨询：</dt>
+                    <dd><a href="">如何退货？</a></dd>
+                    <dd><a href="">最快几天发货？</a></dd>
+                </dl>
+
+                <div class="msg-system">
+                    08:20
+                </div>
+
+
+                <div class="clearfix">
+                    <div class="msg msg-in">
+                        <div class="msg-content">
+                            <div class="avatar">
+                                <img src="img/avatar.jpg" alt=""/>
+                            </div>
+                            <div class="content">
+                                欢迎光临！小二已在此恭候多时！小二已在此恭候多时！
+                            </div>
+                        </div>
+                    </div>
+                </div><!-- /msg-in -->
+
+                <div class="clearfix">
+                    <div class="msg msg-out">
+                        <div class="msg-content">
+                            <div class="avatar">
+                                <img src="img/avatar.jpg" alt=""/>
+                            </div>
+                            <div class="content">
+                                欢迎光临！小二已在此恭候多时！小二已在此恭候多时！
+                            </div>
+                        </div>
+                        <div class="msg-failed">
+                            <i class="iconfont iconfont-information"></i>
+                            发送失败，点击 <a href="">重新发送</a>
+                        </div>
+                    </div>
+                </div><!-- /msg-in -->
+
+
+                <div class="msg-system msg-system-his">
+                    <div class="line line-left"></div>
+                    以上是历史消息
+                    <div class="line line-right"></div>
+                </div>
+
+
+
+
+
             </div>
+            <!-- E chat-area-bd-->
+
+
+
+
+
+            <div class="edit-area">
+                <pre>123</pre>
+            </div>
+
+
         </div>
         <!-- E chat-area-->
 
