--- a/demo.html
+++ b/demo.html
@@ -233,12 +233,20 @@
                 <h2>大族激光科技产业集团股份有限公司</h2>
                 <span class="status"></span>
                 <span class="status status-off"></span>
+
             </div><!-- /chat-area-hd -->
 
 
+            <!-- S 离线提示-->
+            <div class="chat-tip">
+                对方离线，您可以向他（她）发送离线消息。
+                <i class="iconfont iconfont-close"></i>
+            </div>
+            <!-- E 离线提示-->
 
             <!-- S chat-area-bd-->
             <div class="chat-area-bd">
+
                 <div class="msg-system">
                     <a href="">查看更多消息</a>
                 </div>
@@ -302,8 +310,21 @@
 
 
 
-            <div class="edit-area">
-                <pre>123</pre>
+            <div class="chat-edit">
+                <div class="toolbar">
+                    <span class="toolbar-item">
+                        <i class="iconfont iconfont-category"></i>
+                    </span>
+                    <span class="toolbar-item">
+                        <i class="iconfont iconfont-refresh"></i>
+                    </span>
+                     <span class="toolbar-item flr">
+                        <i class="iconfont iconfont-set"></i>
+                    </span>
+                </div>
+                <div class="chat-edit-area">
+                    <textarea name="" id="" cols="30" rows="10"></textarea>
+                </div>
             </div>
 
 
