--- a/demo.html
+++ b/demo.html
@@ -18,11 +18,6 @@
 
 
 
-
-
-
-
-
         <!-- S panel-->
         <div class="panel">
             <div class="header">
@@ -44,6 +39,16 @@
 
 
             <div class="nav-view">
+
+
+                <!-- 暂无联系人提示：-->
+                <div class="nav-view-tip"  style="display:none;">
+                    您最近还没有会话记录 <br/>
+                    快来联系小伙伴吧
+                </div>
+
+
+                <!-- 联系人列表-->
                 <ul class="chat-lst">
                     <li class="chat-item">
                         <div class="avatar">
@@ -223,9 +228,6 @@
 
 
 
-
-
-
         <!-- S chat-area-->
         <div class="chat-area">
 
@@ -342,7 +344,25 @@
 
 
 
-    </div>
+
+
+        <!-- S sidebar -->
+        <div class="sidebar">
+
+
+        </div>
+        <!-- E sidebar-->
+
+
+
+
+
+
+
+
+
+
+    </div><!-- /main -->
 </div>
 
 </body>
