--- a/demo.html
+++ b/demo.html
@@ -316,13 +316,13 @@
 
                 <div class="toolbar">
                     <span class="toolbar-item">
-                        <i class="iconfont iconfont-category"></i>
+                        <i class="iconfont iconfont-emoji"></i>
                     </span>
                     <span class="toolbar-item">
-                        <i class="iconfont iconfont-refresh"></i>
+                        <i class="iconfont iconfont-img"></i>
                     </span>
                      <span class="toolbar-item flr">
-                        <i class="iconfont iconfont-set"></i>
+                        <i class="iconfont iconfont-clock"></i>
                     </span>
                 </div><!-- /toolbar -->
 
@@ -349,6 +349,36 @@
         <!-- S sidebar -->
         <div class="sidebar">
 
+
+            <!-- 历史消息-->
+            <div class="msg-history">
+
+                <div class="msg-history-hd">
+                    <h2>消息记录</h2>
+                    <i class="iconfont iconfont-close"></i>
+                </div><!-- /msg-history-hd -->
+
+
+                <div class="msg-history-bd">
+                    <div class="record">
+                        <div class="record-time">
+                            日期：2017-06-26
+                        </div>
+                        <ul class="record-lst">
+                            <li>
+                                <p class="record-txt-hd"> 对方公司名称  15:20:30</p>
+                                <p class="record-txt-bd">你好，请问有什么可以帮到您的？</p>
+                            </li>
+                            <li>
+                                <p class="record-txt-hd"> 对方公司名称  15:20:30</p>
+                                <p class="record-txt-bd">你好，请问有什么可以帮到您的？</p>
+                            </li>
+                        </ul>
+                    </div>
+                </div><!-- /msg-history-hd -->
+
+
+            </div>
 
         </div>
         <!-- E sidebar-->
