repair chat area

--- a/demo.html
+++ b/demo.html
@@ -374,8 +374,76 @@
                                 <p class="record-txt-bd">你好，请问有什么可以帮到您的？</p>
                             </li>
                         </ul>
-                    </div>
+                    </div><!-- /record-->
+                    <div class="record">
+                        <div class="record-time">
+                            日期：2017-06-26
+                        </div>
+                        <ul class="record-lst">
+                            <li>
+                                <p class="record-txt-hd"> 对方公司名称  15:20:30</p>
+                                <p class="record-txt-bd">你好，请问有什么可以帮到您的？</p>
+                            </li>
+                            <li>
+                                <p class="record-txt-hd"> 对方公司名称  15:20:30</p>
+                                <p class="record-txt-bd">你好，请问有什么可以帮到您的？</p>
+                            </li>
+                        </ul>
+                    </div><!-- /record-->
+                    <div class="record">
+                        <div class="record-time">
+                            日期：2017-06-26
+                        </div>
+                        <ul class="record-lst">
+                            <li>
+                                <p class="record-txt-hd"> 对方公司名称  15:20:30</p>
+                                <p class="record-txt-bd">你好，请问有什么可以帮到您的？</p>
+                            </li>
+                            <li>
+                                <p class="record-txt-hd"> 对方公司名称  15:20:30</p>
+                                <p class="record-txt-bd">你好，请问有什么可以帮到您的？</p>
+                            </li>
+                        </ul>
+                    </div><!-- /record-->
+                    <div class="record">
+                        <div class="record-time">
+                            日期：2017-06-26
+                        </div>
+                        <ul class="record-lst">
+                            <li>
+                                <p class="record-txt-hd"> 对方公司名称  15:20:30</p>
+                                <p class="record-txt-bd">你好，请问有什么可以帮到您的？</p>
+                            </li>
+                            <li>
+                                <p class="record-txt-hd"> 对方公司名称  15:20:30</p>
+                                <p class="record-txt-bd">你好，请问有什么可以帮到您的？</p>
+                            </li>
+                        </ul>
+                    </div><!-- /record-->
+                    <div class="record">
+                        <div class="record-time">
+                            日期：2017-06-26
+                        </div>
+                        <ul class="record-lst">
+                            <li>
+                                <p class="record-txt-hd"> 对方公司名称  15:20:30</p>
+                                <p class="record-txt-bd">你好，请问有什么可以帮到您的？</p>
+                            </li>
+                            <li>
+                                <p class="record-txt-hd"> 对方公司名称  15:20:30</p>
+                                <p class="record-txt-bd">你好，请问有什么可以帮到您的？</p>
+                            </li>
+                        </ul>
+                    </div><!-- /record-->
                 </div><!-- /msg-history-hd -->
+
+
+
+                <div class="msg-history-ft">
+                    <div class="filter">
+
+                    </div><!-- /filter -->
+                </div><!-- /msg-history-ft -->
 
 
             </div>
