--- a/demo.html
+++ b/demo.html
@@ -441,7 +441,27 @@
 
                 <div class="msg-history-ft">
                     <div class="filter">
-
+                        <div class="filter-area">
+                            范围:
+                            <select name="" id="">
+                                <option value="">最近一周</option>
+                            </select>
+                            内容:
+                            <input type="text"/>
+                            <button class="btn btn-s btn-blank">确定</button>
+                        </div><!-- /filter-area -->
+                        <div class="pager">
+                            <span class="search">
+                                <i class="iconfont iconfont-search"></i>查找
+                            </span>
+                            <div class="pager-nav">
+                                <i class="iconfont iconfont-pre"></i>
+                                <i class="iconfont iconfont-arrow-left"></i>
+                                第 <input type="text"/> 页/32页
+                                <i class="iconfont iconfont-next"></i>
+                                <i class="iconfont iconfont-arrow-right"></i>
+                            </div>
+                        </div>
                     </div><!-- /filter -->
                 </div><!-- /msg-history-ft -->
 
