--- a/demo.html
+++ b/demo.html
@@ -321,7 +321,7 @@
                     <span class="toolbar-item">
                         <i class="iconfont iconfont-img"></i>
                     </span>
-                     <span class="toolbar-item flr">
+                     <span class="toolbar-item flr js-toggle-record">
                         <i class="iconfont iconfont-clock"></i>
                     </span>
                 </div><!-- /toolbar -->
@@ -351,11 +351,11 @@
 
 
             <!-- 历史消息-->
-            <div class="msg-history">
+            <div class="msg-history fadeOut js-msg-history">
 
                 <div class="msg-history-hd">
                     <h2>消息记录</h2>
-                    <i class="iconfont iconfont-close"></i>
+                    <i class="iconfont iconfont-close js-close-msg"></i>
                 </div><!-- /msg-history-hd -->
 
 
@@ -441,7 +441,7 @@
 
                 <div class="msg-history-ft">
                     <div class="filter">
-                        <div class="filter-area">
+                        <div class="filter-area" style="display: none">
                             范围:
                             <select name="" id="">
                                 <option value="">最近一周</option>
@@ -458,8 +458,8 @@
                                 <i class="iconfont iconfont-pre"></i>
                                 <i class="iconfont iconfont-arrow-left"></i>
                                 第 <input type="text"/> 页/32页
-                                <i class="iconfont iconfont-next"></i>
                                 <i class="iconfont iconfont-arrow-right"></i>
+                                <i class="iconfont iconfont-next"></i>
                             </div>
                         </div>
                     </div><!-- /filter -->
@@ -483,5 +483,8 @@
     </div><!-- /main -->
 </div>
 
+
+<script src="js/jquery-1.7.2.js"></script>
+<script src="js/demo.js"></script>
 </body>
 </html>
