--- a/demo.html
+++ b/demo.html
@@ -351,7 +351,7 @@
 
 
             <!-- 历史消息-->
-            <div class="msg-history fadeOut js-msg-history">
+            <div class="msg-history fadeOutL js-msg-history">
 
                 <div class="msg-history-hd">
                     <h2>消息记录</h2>
@@ -441,7 +441,7 @@
 
                 <div class="msg-history-ft">
                     <div class="filter">
-                        <div class="filter-area" style="display: none">
+                        <div class="filter-area fadeOutB ">
                             范围:
                             <select name="" id="">
                                 <option value="">最近一周</option>
@@ -451,7 +451,7 @@
                             <button class="btn btn-s btn-blank">确定</button>
                         </div><!-- /filter-area -->
                         <div class="pager">
-                            <span class="search">
+                            <span class="search js-seach-record">
                                 <i class="iconfont iconfont-search"></i>查找
                             </span>
                             <div class="pager-nav">
