--- a/demo.html
+++ b/demo.html
@@ -484,6 +484,66 @@
 </div>
 
 
+
+
+
+
+
+<!-- S 弹出层 -->
+
+<div class="pop pop-m pop-service" style="display:block;">
+    <div class="pop-hd">
+        <h3>客服设置</h3>
+        <i class="iconfont iconfont-close"></i>
+    </div>
+    <div class="pop-bd">
+
+
+        <div class="tab">
+            <ul class="tab-menu">
+                <li class="on">自动接待</li>
+                <li>常见问题推送</li>
+            </ul>
+
+            <div class="tab-con">
+                <div class="tab-node">
+                    <ul class="form-lst">
+                        <li class="field">
+                            <span class="field-tit">欢迎语：</span>
+                            <div class="field-bd">
+                                <textarea name="" id="" cols="30" rows="10" placeholder="50字以内"></textarea>
+                            </div>
+                        </li>
+                        <li class="field">
+                            <span class="field-tit">离线留言：</span>
+                            <div class="field-bd">
+                                <textarea name="" id="" cols="30" rows="10" placeholder="50字以内"></textarea>
+                            </div>
+                        </li>
+                    </ul>
+
+                    <div class="pop-ft">
+                        <button class="btn btn-m btn-info">提交</button>
+                    </div>
+
+                </div><!-- /tab-node -->
+                <div class="tab-node" style="display: none">
+
+                </div><!-- /tab-node -->
+            </div>
+        </div>
+
+
+    </div>
+
+</div><!-- /客服设置 -->
+
+
+<!-- E 弹出层 -->
+
+
+
+
 <script src="js/jquery-1.7.2.js"></script>
 <script src="js/demo.js"></script>
 </body>
