--- a/demo.html
+++ b/demo.html
@@ -511,19 +511,19 @@
                         <li class="field">
                             <span class="field-tit">欢迎语：</span>
                             <div class="field-bd">
-                                <textarea name="" id="" cols="30" rows="10" placeholder="50字以内"></textarea>
+                                <textarea class="txtarea" name="" id="" cols="30" rows="10" placeholder="50字以内"></textarea>
                             </div>
                         </li>
                         <li class="field">
                             <span class="field-tit">离线留言：</span>
                             <div class="field-bd">
-                                <textarea name="" id="" cols="30" rows="10" placeholder="50字以内"></textarea>
+                                <textarea class="txtarea" name="" id="" cols="30" rows="10" placeholder="50字以内"></textarea>
                             </div>
                         </li>
                     </ul>
 
                     <div class="pop-ft">
-                        <button class="btn btn-m btn-info">提交</button>
+                        <button class="btn btn-l btn-info">提交</button>
                     </div>
 
                 </div><!-- /tab-node -->
