--- a/demo.html
+++ b/demo.html
@@ -506,7 +506,7 @@
             </ul>
 
             <div class="tab-con">
-                <div class="tab-node">
+                <div class="tab-node"  style="display: none">
                     <ul class="form-lst">
                         <li class="field">
                             <span class="field-tit">欢迎语：</span>
@@ -523,12 +523,44 @@
                     </ul>
 
                     <div class="pop-ft">
-                        <button class="btn btn-l btn-info">提交</button>
+                        <button class="btn btn-l btn-info " >提交</button>
                     </div>
 
                 </div><!-- /tab-node -->
-                <div class="tab-node" style="display: none">
-
+                <div class="tab-node">
+                    <ul class="form-lst">
+                        <li class="field">
+                            <span class="field-tit">状态：</span>
+                            <div class="field-bd">
+                                <div class="choose-group">
+                                    <label for=""><input type="radio"/>开启</label>
+                                    <label for=""><input type="radio"/>关闭</label>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                    <div class="faq">
+                        <div class="faq-hd">
+                            问题设置 <span class="after-txt">最多可添加6条</span>
+                        </div>
+                        <div class="faq-bd">
+                            <ul class="faq-lst">
+                                <li>如何退货？</li>
+                                <li class="on">几天内发货？</li>
+                            </ul>
+                            <ul class="faq-action">
+                                <li>
+                                    <a class="btn btn-l btn-blank" href="javascript:;">添加</a>
+                                </li>
+                                <li>
+                                    <a class="btn btn-l btn-blank" href="javascript:;">修改</a>
+                                </li>
+                                <li>
+                                    <a class="btn btn-l btn-blank" href="javascript:;">删除</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div><!-- /tab-node -->
             </div>
         </div>
