--- a/demo.html
+++ b/demo.html
@@ -491,7 +491,7 @@
 
 <!-- S 弹出层 -->
 
-<div class="pop pop-m pop-service" style="display:block;">
+<div class="pop pop-m pop-service" style="display:none;">
     <div class="pop-hd">
         <h3>客服设置</h3>
         <i class="iconfont iconfont-close"></i>
@@ -500,13 +500,13 @@
 
 
         <div class="tab">
-            <ul class="tab-menu">
+            <ul class="tab-menu js-tab">
                 <li class="on">自动接待</li>
                 <li>常见问题推送</li>
             </ul>
 
             <div class="tab-con">
-                <div class="tab-node"  style="display: none">
+                <div class="tab-node" >
                     <ul class="form-lst">
                         <li class="field">
                             <span class="field-tit">欢迎语：</span>
@@ -527,18 +527,12 @@
                     </div>
 
                 </div><!-- /tab-node -->
-                <div class="tab-node">
-                    <ul class="form-lst">
-                        <li class="field">
-                            <span class="field-tit">状态：</span>
-                            <div class="field-bd">
-                                <div class="choose-group">
-                                    <label for=""><input type="radio"/>开启</label>
-                                    <label for=""><input type="radio"/>关闭</label>
-                                </div>
-                            </div>
-                        </li>
-                    </ul>
+                <div class="tab-node" style="display: none">
+                    <div class="faq-switch">
+                        状态：
+                        <label for=""><input type="radio"/>开启</label>
+                        <label for=""><input type="radio"/>关闭</label>
+                    </div>
                     <div class="faq">
                         <div class="faq-hd">
                             问题设置 <span class="after-txt">最多可添加6条</span>
@@ -552,8 +546,9 @@
                                 <li>
                                     <a class="btn btn-l btn-blank" href="javascript:;">添加</a>
                                 </li>
+                                <!-- 如果按钮是禁用状态，则添加class: .disabled-->
                                 <li>
-                                    <a class="btn btn-l btn-blank" href="javascript:;">修改</a>
+                                    <a class="btn btn-l btn-blank disabled" href="javascript:;">修改</a>
                                 </li>
                                 <li>
                                     <a class="btn btn-l btn-blank" href="javascript:;">删除</a>
@@ -569,6 +564,93 @@
     </div>
 
 </div><!-- /客服设置 -->
+
+<div class="pop pop-m pop-service" style="display:none;">
+    <div class="pop-hd">
+        <h3>添加常见问题</h3>
+        <i class="iconfont iconfont-close"></i>
+    </div>
+    <div class="pop-bd">
+
+        <div class="faq-set">
+            <ul class="form-lst">
+                <li class="field">
+                    <span class="field-tit field-tit-ta">
+                        <b class="required">*</b>
+                        问题：
+                    </span>
+                    <div class="field-bd">
+                        <input class="txt" type="text" placeholder="50字以内"/>
+                        <div class="form-error">
+                            <i class="iconfont iconfont-error"></i>
+                            报错文案以需求为准
+                        </div>
+                    </div>
+                </li>
+                <li class="field">
+                    <span class="field-tit ">
+                        <b class="required">*</b>
+                        答案：
+                    </span>
+                    <div class="field-bd">
+                        <textarea class="txtarea" name="" id="" cols="30" rows="10" placeholder="500字以内"></textarea>
+                        <div class="form-error">
+                            <i class="iconfont iconfont-error"></i>
+                            报错文案以需求为准
+                        </div>
+                    </div>
+                </li>
+            </ul>
+        </div>
+
+
+    </div>
+
+    <div class="pop-ft">
+        <a class="btn btn-l btn-info" href="javascript:;">确定</a>
+        <a class="btn btn-l btn-default" href="javascript:;">取消</a>
+    </div>
+
+</div><!-- /添加常见问题 -->
+
+
+
+
+
+<div class="pop pop-tip" style="display:none;">
+    <div class="pop-hd">
+        <h3>提示</h3>
+        <i class="iconfont iconfont-close"></i>
+    </div>
+    <div class="pop-bd">
+        <p class="tac">
+            删除后不可恢复，确认删除？
+        </p>
+    </div>
+
+    <div class="pop-ft">
+        <a class="btn btn-l btn-info" href="javascript:;">确定</a>
+        <a class="btn btn-l btn-default" href="javascript:;">取消</a>
+    </div>
+</div><!-- /提示1 -->
+
+
+
+
+<div class="pop pop-tip" style="display:none;">
+    <div class="pop-hd">
+        <h3>提示</h3>
+        <i class="iconfont iconfont-close"></i>
+    </div>
+    <div class="pop-bd">
+        <p class="mb10">您已在其他页面发起咨询，当前咨询已失效，</p>
+        <a href="">请点击这里重新咨询!</a>
+    </div>
+
+    <div class="pop-ft">
+        <a class="btn btn-l btn-info" href="javascript:;">确定</a>
+    </div>
+</div><!-- /提示2 -->
 
 
 <!-- E 弹出层 -->
