--- a/demo.html
+++ b/demo.html
@@ -491,7 +491,7 @@
 
 <!-- S 弹出层 -->
 
-<div class="pop pop-m pop-service" style="display:none;">
+<div class="pop pop-m pop-service" style="display:block; left: 10%; top: 900px;">
     <div class="pop-hd">
         <h3>客服设置</h3>
         <i class="iconfont iconfont-close"></i>
@@ -565,7 +565,7 @@
 
 </div><!-- /客服设置 -->
 
-<div class="pop pop-m pop-service" style="display:none;">
+<div class="pop pop-m pop-service" style="display:block; left: 60%; top: 900px;">
     <div class="pop-hd">
         <h3>添加常见问题</h3>
         <i class="iconfont iconfont-close"></i>
@@ -617,7 +617,7 @@
 
 
 
-<div class="pop pop-tip" style="display:none;">
+<div class="pop pop-tip" style="display:block; left: 10%; top: 1500px;">
     <div class="pop-hd">
         <h3>提示</h3>
         <i class="iconfont iconfont-close"></i>
@@ -637,7 +637,7 @@
 
 
 
-<div class="pop pop-tip" style="display:none;">
+<div class="pop pop-tip" style="display:block; left: 60%; top: 1500px;">
     <div class="pop-hd">
         <h3>提示</h3>
         <i class="iconfont iconfont-close"></i>
