add bubble layer

--- a/demo.html
+++ b/demo.html
@@ -718,7 +718,27 @@
 
 
 
+
+
+
+<!-- S 提示弹层 -->
+<div class="bubble">
+    <i class="iconfont iconfont-success"></i>
+    提交成功！
+</div>
+
+
+<div class="bubble">
+    <i class="iconfont iconfont-error"></i>
+    内容含有敏感词，请重新提交！
+</div>
+
+<!-- E 提示弹层 -->
+
+
+
 <script src="js/jquery-1.7.2.js"></script>
 <script src="js/demo.js"></script>
 </body>
 </html>
+
