--- a/demo.html
+++ b/demo.html
@@ -278,9 +278,6 @@
                             </div>
                             <div class="content">
                                 欢迎光临！小二已在此恭候多时！小二已在此恭候多时！
-                                <span class="msg-status">
-                                    <img src="img/loading.gif" alt=""/>
-                                </span>
                             </div>
                         </div>
                     </div>
@@ -295,6 +292,9 @@
                             </div>
                             <div class="content">
                                 请问有刺激的图片吗？
+                                <span class="msg-status">
+                                    <img src="img/loading.gif" alt=""/>
+                                </span>
                             </div>
                         </div>
                     </div>
@@ -309,9 +309,6 @@
                             </div>
                             <div class="content">
                                 <img src="img/avatar.jpg" alt=""/>
-                                <span class="msg-status">
-                                    <img src="img/loading.gif" alt=""/>
-                                </span>
                             </div>
                         </div>
                     </div>
@@ -722,13 +719,13 @@
 
 
 <!-- S 提示弹层 -->
-<div class="bubble">
+<div class="bubble" style="display:none;">
     <i class="iconfont iconfont-success"></i>
     提交成功！
 </div>
 
 
-<div class="bubble">
+<div class="bubble" style="display:none;">
     <i class="iconfont iconfont-error"></i>
     内容含有敏感词，请重新提交！
 </div>
