--- a/demo.html
+++ b/demo.html
@@ -582,7 +582,7 @@
                     </div>
                     <div class="faq">
                         <div class="faq-hd">
-                            问题设置 <span class="after-txt">最多可添加6条</span>
+                            问题设置 <span class="after-txt">（最多可设置6个问题）</span>
                         </div>
                         <div class="faq-bd">
                             <ul class="faq-lst">
@@ -598,7 +598,7 @@
                                     <a class="btn btn-l btn-blank disabled" href="javascript:;">修改</a>
                                 </li>
                                 <li>
-                                    <a class="btn btn-l btn-blank" href="javascript:;">删除</a>
+                                    <a class="btn btn-l btn-blank btn-delete" href="javascript:;">删除</a>
                                 </li>
                             </ul>
                         </div>
@@ -641,6 +641,7 @@
                     </span>
                     <div class="field-bd">
                         <textarea class="txtarea" name="" id="" cols="30" rows="10" placeholder="500字以内"></textarea>
+                        <p class="ta-note">0/500</p>
                         <div class="form-error">
                             <i class="iconfont iconfont-error"></i>
                             报错文案以需求为准
