add search result list

--- a/demo.html
+++ b/demo.html
@@ -35,6 +35,20 @@
             <div class="search-bar">
                 <i class="iconfont iconfont-search"></i>
                 <input type="text" class="txt" placeholder="搜索最近联系人"/>
+                <ul class="search-lst">
+                    <li>
+                        <div class="avatar">
+                            <img src="img/avatar.jpg" alt=""/>
+                        </div>
+                        <h3 class="nickname" title="广西星火科技">广西星火科技</h3>
+                    </li>
+                    <li>
+                        <div class="avatar">
+                            <img src="img/avatar.jpg" alt=""/>
+                        </div>
+                        <h3 class="nickname" title="广西星火科技">广西星火科技</h3>
+                    </li>
+                </ul>
             </div><!-- /search-bar -->
 
 
