add search list

--- a/demo.html
+++ b/demo.html
@@ -54,6 +54,8 @@
 
             <div class="nav-view">
 
+                <div class="alpha" style="display: block"></div>
+
 
                 <!-- 暂无联系人提示：-->
                 <div class="nav-view-tip"  style="display:none;">
